# openglpractice

./: .gitignore  CMakeLists.txt  main  main.cpp
DATA/floor/: floor.dae  torus.dae  untitled.dae
DATA/grass_cube/: grass.dae
DATA/gun/: Handgun_dae.dae
DATA/window/: window.dae
adv_opengl/advanced_data/: CMakeLists.txt
adv_opengl/blending/: CMakeLists.txt  main.cpp
adv_opengl/cubemap/: CMakeLists.txt  main.cpp
adv_opengl/depth_testing/: CMakeLists.txt  main.cpp
adv_opengl/etc/: CMakeLists.txt  main.cpp
adv_opengl/framebuffer/: CMakeLists.txt  main.cpp
adv_opengl/framebuffer/include/: util.hpp
adv_opengl/framebuffer/shaders/framebuffer/: frag.glsl
adv_opengl/framebuffer/shaders/models/base/: frag.glsl
adv_opengl/framebuffer/shaders/screen/main/: frag.glsl
adv_opengl/framebuffer/src/: util.cpp
adv_opengl/normal_mapping/: CMakeLists.txt  main.cpp
adv_opengl/sem/: CMakeLists.txt  main.cpp
adv_opengl/stencil/: CMakeLists.txt  main.cpp
adv_opengl/stencil_testing/: CMakeLists.txt  main.cpp
animation/animation_load/: CMakeLists.txt  main.cpp
animation/load/: CMakeLists.txt  main.cpp
base/base/: CMakeLists.txt  main.cpp
base/normal_mapping/: CMakeLists.txt  main.cpp
camera/: CMakeLists.txt  OpenGLCamera-0.1  main.cpp
camera/include/: util.hpp
camera/shaders/: fragment.shader
coordinate_systems/: CMakeLists.txt  OpenGLCoordinateSystems-0.1  OpenGLCoordinateSystems-0.2  main.cpp
double_camera/: CMakeLists.txt  OpenGLDoubleWindow-0.1
etc/array_to_binary/: read  read.cpp  write  write.cpp
etc/sprintf/: main  main.cc
etc/struct/: main  main.cc
getting_started/camera/: CMakeLists.txt  OpenGLCamera-0.1
getting_started/coordinate_systems/: main.cpp
getting_started/double_camera/: main.cpp
getting_started/texture/: CMakeLists.txt  OpenGLTexture-0.1
getting_started/transformation/: main.cpp
lighting/basic_lighting/: CMakeLists.txt  OpenGL_Lighting_Basic_Lighting-0.1  main.cpp
lighting/caster_directional/: CMakeLists.txt  OpenGL_Lighting_caster_directional-0.1  main.cpp
lighting/caster_point/: CMakeLists.txt  OpenGL_Lighting_caster_Point-0.1  main.cpp
lighting/caster_spot/: .CMakeLists.txt.swp  CMakeLists.txt  SpotlightCaster_0.1  main.cpp
lighting/caster_spotlight/: main.cpp
lighting/colors/: CMakeLists.txt  OpenGL_Lighting_Colors-0.1  main.cpp
lighting/lighting_maps/: OpenGL_Lighting_Lighting_Maps-0.1  main.cpp
lighting/material/: CMakeLists.txt  OpenGL_Lighting_Material-0.1  main.cpp
lighting/multiple_lights/: CMakeLists.txt  MultipleLights_0.1  main.cpp
model_loading/assimp/: CMakeLists.txt  ModelLoading_0.1  main.cpp
model_loading/etc/: CMakeLists.txt  main.cpp
shaders/: vertex.shader
texture/: main.cpp
transformation/: CMakeLists.txt  OpenGLTransformation-0.1  main.cpp
tutorial1/: CMakeLists.txt  OpenGLTesting-0.1
(+103 files in other folders)
